// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`any.sql 1`] = `
Object {
  "parameters": Map {
    1 => Object {
      "column": "status",
      "isArray": true,
      "schema": undefined,
      "table": "orders",
    },
  },
  "warnings": Array [],
}
`;

exports[`json-operator.sql 1`] = `
Object {
  "parameters": Map {
    1 => Object {
      "column": "shipment_data",
      "isArray": false,
      "jsonPath": Object {
        "isText": true,
        "path": "company",
      },
      "schema": undefined,
      "table": "orders",
    },
  },
  "warnings": Array [],
}
`;

exports[`select.sql 1`] = `
Object {
  "parameters": Map {},
  "warnings": Array [],
}
`;
